# hiveloop

./: .air.api.toml  .air.toml  .air.worker.toml  .dockerignore  .env.example  .env.rag.example  .gitignore  .gitleaksignore  .golangci.yml  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.worker  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  actions-generation-plan.txt  agent-improvements.md  agents.stub.json  architect-output-iteration-1.txt  buildspec.yml  caching.txt  docker-compose.yml  dump.rdb  fixes-todo.txt  forge-architect-prompts.md  go.mod  go.sum  proxy.nginx.conf  refactor.txt  safe-browsing-review-request.txt  sample.html  skills-lock.json  todo.txt
sandboxes/employee/: .dockerignore  .env.example  .gitignore  .mcp.json  Cargo.toml  Dockerfile.runtime  Makefile  README.md  config.json  config.sample.yaml  db-todos.txt  openapi.json
sandboxes/employee/crates/agent/: Cargo.toml
sandboxes/employee/crates/agent/examples/: spike.rs
sandboxes/employee/crates/agent/src/: cancel_cron_tool.rs  check_bash_status_tool.rs  check_delegated_status_tool.rs  cloud_agents.rs  cron_tool.rs  delegate_tool.rs  history.rs  lib.rs  list_cron_jobs_tool.rs  load_tools_tool.rs  model_client.rs  model_helpers.rs  post_to_channel_tool.rs  primitives.rs  request_builder.rs  rig_tool_registry.rs  runner.rs  schedule_cron_tool.rs  session_helpers.rs  specialists.rs  status_update_tool.rs  streaming_fix.rs  tool_registry.rs  update_cron_tool.rs  wake_tool.rs
sandboxes/employee/crates/agent/tests/: cloud_agents.rs  model_helpers_integration.rs  smoke.rs  specialists.rs
sandboxes/employee/crates/api/: Cargo.toml
sandboxes/employee/crates/api/src/: auth.rs  cloud_agent_callback_payload.rs  cloud_agent_callbacks.rs  handlers.rs  http_gateway.rs  lib.rs  observability_handlers.rs  specialist_callback_payload.rs  specialist_callbacks.rs  state.rs
sandboxes/employee/crates/api/tests/: cloud_agent_callback.rs  specialist_callback.rs
sandboxes/employee/crates/domain/: Cargo.toml
sandboxes/employee/crates/domain/src/: agent_definition.rs  config_store.rs  cron.rs  inbound.rs  lib.rs  mcp_specs.rs  model_config.rs  (+6 more)
sandboxes/employee/crates/employee-bridge/: Cargo.toml
sandboxes/employee/crates/eval-harness/: Cargo.toml
sandboxes/employee/crates/gateway/: Cargo.toml
sandboxes/employee/crates/mcp/: Cargo.toml
sandboxes/employee/crates/observability/: Cargo.toml
sandboxes/employee/crates/outbound/: Cargo.toml
sandboxes/employee/crates/skills/: Cargo.toml
sandboxes/employee/crates/storage/: Cargo.toml
sandboxes/employee/crates/tools/: Cargo.toml
sandboxes/employee/docker/runtime/: gh-wrapper  git-credential-hiveloop
sandboxes/employee/openrouter-proxy/: README.md  analyze_cache.py  export_conversations.py  proxy.py  replay_requests.py
sandboxes/employee/scripts/: apply_config.py  build_linux_release.sh  build_runtime_image.sh  test_mcp.sh  test_runtime_image.sh
sandboxes/runtime/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.runtime  Dockerfile.specialist  Makefile  README.md  config.json  integration.md  openapi.json
sandboxes/runtime/crates/agent/: Cargo.toml
sandboxes/runtime/crates/api/: Cargo.toml
sandboxes/runtime/crates/bridge/: Cargo.toml
sandboxes/runtime/crates/core/: Cargo.toml
sandboxes/runtime/crates/eval-harness/: Cargo.toml
sandboxes/runtime/crates/gateway/: Cargo.toml
sandboxes/runtime/crates/harness/: Cargo.toml
sandboxes/runtime/crates/llm/: Cargo.toml
sandboxes/runtime/crates/observability/: Cargo.toml
sandboxes/runtime/crates/outbound/: Cargo.toml
sandboxes/runtime/crates/runtime/: Cargo.toml
sandboxes/runtime/crates/safety/: Cargo.toml
sandboxes/runtime/crates/storage/: Cargo.toml
sandboxes/runtime/crates/tools/: Cargo.toml
sandboxes/runtime/crates/webhooks/: Cargo.toml
sandboxes/runtime/docker/: Dockerfile
sandboxes/runtime/docker/runtime/: gh-wrapper  git-credential-hivy
sandboxes/runtime/docs/: SUMMARY.md
sandboxes/runtime/docs/api-reference/: authentication.md  conversations-api.md  index.md  push-api.md  sse-events.md  websocket-events.md
sandboxes/runtime/docs/control-plane/: handling-webhooks.md  pushing-agents.md
sandboxes/runtime/docs/core-concepts/: agents.md  conversations.md  mcp.md  verifier-agent.md  webhooks.md
sandboxes/runtime/docs/deployment/: binary-deployment.md  docker-deployment.md  index.md  kubernetes.md
sandboxes/runtime/docs/development/: index.md
sandboxes/runtime/docs/getting-started/: configuration.md  docker.md  installation.md  quickstart.md
sandboxes/runtime/docs/llm-providers/: anthropic.md  cohere.md  google.md  index.md  openai-compatible.md
sandboxes/runtime/docs/reference/: changelog.md  environment-variables.md  sandbox-reference.md
sandboxes/runtime/docs/tools-reference/: agent-tools.md  all-tools.md  custom-tools.md  index.md
sandboxes/runtime/docs/tutorials/: code-review-agent.md  customer-support-agent.md  github-integration.md  multi-agent-system.md
sandboxes/runtime/e2e/lsp-smoke/: run_smoke.sh
sandboxes/runtime/fixtures/agents/: agent_with_integrations.json  full_agent.json
sandboxes/runtime/openrouter-proxy/: README.md  config_for_proxy.py
sandboxes/runtime/scripts/: apply_config.py  build_linux_release.sh  build_runtime_image.sh  e2e_claude.sh  e2e_opencode.sh  eval_subagents.sh  hivy-guardian.sh  immortal-real-test.mjs  test_runtime_image.sh
sandboxes/runtime/scripts/eval/: prompt-backend.txt  prompt-code-review.txt  prompt-design-system.txt  prompt-frontend.txt  prompt-main.txt  prompt-qa.txt  run.sh
services/rag-engine/: Cargo.toml  DECISIONS.md  Dockerfile  README.md
services/rag-engine/crates/rag-engine-chunker/: Cargo.toml
services/rag-engine/crates/rag-engine-embed/: Cargo.toml
services/rag-engine/crates/rag-engine-lance/: Cargo.toml
services/rag-engine/crates/rag-engine-proto/: Cargo.toml  build.rs
services/rag-engine/crates/rag-engine-rerank/: Cargo.toml
services/rag-engine/crates/rag-engine-server/: Cargo.toml
services/rag-engine/scripts/: smoke.sh
(+3886 files in other folders)
