[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/runtime",
    "crates/api",
    "crates/webhooks",
    "crates/bridge",
    "crates/storage",
    "crates/harness",
    "e2e/mock-control-plane",
    "e2e/storage-e2e",
]

[workspace.lints.clippy]
# Prevent blocking operations in async contexts
await_holding_lock = "deny"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "io"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = [
    "rustls", "json", "stream"
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency
dashmap = "6"

# Resilience
backon = "1"

# Webhook signing
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
subtle = "2"
hex = "0.4"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-opentelemetry = "0.30"
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }

# Sentry — error/panic reporting (errors-only, no perf traces by default).
# `tower` integration brings axum middleware compat; `tracing` makes
# tracing events become breadcrumbs automatically.
sentry = { version = "0.48", default-features = false, features = [
    "backtrace", "contexts", "panic", "reqwest", "rustls", "tracing",
] }
sentry-tower = { version = "0.48", features = ["http", "axum-matched-path"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# String enums (used by core::provider)
strum = "0.27"
strum_macros = "0.27"

# MIME types (used by core::artifacts wire types)
mime = "0.3"

# OpenAPI
utoipa = { version = "5", features = ["chrono"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
http = "1"

# Internal crates — "core" uses package rename because `core` is a reserved
# Rust crate name (std::core). All other crates use their package name directly.
bridge_core = { path = "crates/core", package = "core" }
runtime = { path = "crates/runtime" }
api = { path = "crates/api" }
webhooks = { path = "crates/webhooks" }
storage = { path = "crates/storage" }
harness = { path = "crates/harness" }

# WebSocket client (for e2e tests)
tokio-tungstenite = { version = "0.26", features = ["connect"] }

# Dev dependencies
tokio-test = "0.4"
wiremock = "0.6"
assert_json_diff = "2"
tempfile = "3"
pretty_assertions = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "unwind"
