[workspace]
resolver = "2"
members = [
    "crates/rag-engine-proto",
    "crates/rag-engine-lance",
    "crates/rag-engine-embed",
    "crates/rag-engine-rerank",
    "crates/rag-engine-chunker",
    "crates/rag-engine-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
publish = false

# Shared dependency versions pinned at workspace level so every crate sees
# the same tonic/prost/tokio surface. Downstream tranches append here, they
# do not re-pin.
[workspace.dependencies]
tonic = "0.12"
tonic-build = "0.12"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
http = "1"
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
subtle = "2"

# 2C deps
# `async-openai` is the provider-generic OpenAI-compatible client used by the
# embedder. See DECISIONS.md — Tranche 2C refactor for rationale. Disabling
# default features and explicitly selecting `rustls` keeps the TLS story
# unambiguous across crates. `async-openai` re-exports `backoff` as the retry
# configuration type, so we pin it at workspace level too.
async-openai = { version = "0.35", default-features = false, features = ["rustls", "embedding"] }
backoff = "0.4"
# reqwest is still pulled in because we hand async-openai a custom
# `reqwest::Client` to pin timeout + user-agent. `rustls-tls` matches the
# TLS backend picked for async-openai.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde_json = "1"
sha2 = "0.10"
rand_chacha = "0.3"
rand = "0.8"
tiktoken-rs = "0.6"
# 2C test deps
wiremock = "0.6"

# The proto crate is internal; depended on by path.
rag-engine-proto = { path = "crates/rag-engine-proto" }
rag-engine-lance = { path = "crates/rag-engine-lance" }
rag-engine-embed = { path = "crates/rag-engine-embed" }
rag-engine-rerank = { path = "crates/rag-engine-rerank" }
rag-engine-chunker = { path = "crates/rag-engine-chunker" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
