[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
domain.workspace = true
storage.workspace = true
skills.workspace = true
outbound.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
http = "1"
