[package]
name = "domain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
openapi = ["dep:utoipa"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
arc-swap.workspace = true
thiserror.workspace = true
utoipa = { workspace = true, optional = true }
