[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
domain.workspace = true
tools.workspace = true
outbound.workspace = true
gateway.workspace = true
storage.workspace = true
mcp.workspace = true
skills.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true

schemars = "0.8"
rig-core = "0.36.0"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
async-stream = "0.3.6"
base64 = "0.22.1"
sentry.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber.workspace = true
axum = "0.7"
