[package]
name = "observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
openapi = ["dep:utoipa"]

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa = { workspace = true, optional = true }
