[package]
name = "runtime"
version = "0.3.0"
edition = "2021"

[dependencies]
bridge_core = { workspace = true }
harness = { workspace = true }
webhooks = { workspace = true }
storage = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
