[package]
name = "rag-engine-chunker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Chunker (text-splitter + tiktoken-rs, Onyx-compatible semantics). STUB in Tranche 2A; Tranche 2E fills it."

[dependencies]
# intentionally empty in 2A — 2E adds text-splitter, tiktoken-rs,
# unicode-normalization, regex.
