[package]
name = "rag-engine-chunker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Chunker (text-splitter + tiktoken-rs, Onyx-compatible semantics) — mini-chunks + AccumulatorState ported from Onyx."

[dependencies]
text-splitter = { workspace = true }
tiktoken-rs = { workspace = true }
unicode-normalization = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
