[package]
name = "rag-engine-lance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "LanceDB storage layer for the rag-engine service. STUB in Tranche 2A; Tranche 2B fills it."

[dependencies]
# intentionally empty in 2A — 2B adds lancedb, arrow-*, futures, uuid, sha2.
