[package]
name = "rag-engine-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "tonic-generated gRPC client+server stubs for the Hiveloop rag-engine service. Built once; every other crate depends on the bindings here."

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
