[package]
name = "rag-engine-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "The rag-engine gRPC server binary. In Tranche 2A it wires config + tracing + auth interceptor + health + unimplemented RPC stubs."
default-run = "rag-engine-server"

[[bin]]
name = "rag-engine-server"
path = "src/main.rs"

[dependencies]
rag-engine-proto = { workspace = true }
# 2F — wire the domain crates into the gRPC handlers.
rag-engine-lance = { workspace = true }
rag-engine-embed = { workspace = true }
rag-engine-rerank = { workspace = true }
rag-engine-chunker = { workspace = true }

tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
subtle = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

# 2G — observability (OTel tracing + Prometheus + middleware + metrics server).
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
ulid = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }

# 2F — idempotency LRU cache (not a workspace dep; only the server uses it).
lru = "0.12"

[dev-dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
opentelemetry = { workspace = true }

# 2F — real MinIO via testcontainers + deterministic vector generator.
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
